# LiteRT-LM

./: .bazelrc  BUILD  CMakeLists.txt  Cargo.toml  NOTICE  WORKSPACE  build_cli.bat  cargo-bazel-lock.json
.github/workflows/: ci-build-win.yml  ci-build.yml
android/: README.md
c/: BUILD  CMakeLists.txt  engine.cc  engine_test.cc
cmake/modules/: collect_dependencies.cmake  external_project.cmake  fetch_content.cmake  macros.cmake  setup_generated_src_files.cmake  utils.cmake
cmake/patches/: tflite_absl_shim.cmake  tflite_proto_shim.cmake
cmake/scripts/: verify_install.cmake
go_api/: BUILD  MODULE.bazel  engine.go  engine_test.go  main.go
go_api/cli/: BUILD  main.go  main_test.go
go_api/cli/cmd/: BUILD  list.go  list_models.go  pull.go  rm.go  root.go  run.go
runtime/: CMakeLists.txt
runtime/components/: BUILD  CMakeLists.txt  kv_cache_copier.h  kv_cache_copier_cpu.cc  kv_cache_copier_cpu.h  kv_cache_copier_factory.cc  kv_cache_copier_factory.h  lora.cc  model_resources_task.cc  model_resources_test.cc  model_resources_tflite.cc  model_resources_tflite.h  prompt_template.cc  prompt_template.h  sampler.h  sampler_factory.cc  sampling_cpu_util.cc  sampling_cpu_util.h  sentencepiece_tokenizer.cc  sentencepiece_tokenizer.h  tokenizer.h  top_p_cpu_sampler.cc  top_p_cpu_sampler.h
runtime/components/constrained_decoding/: BUILD  CMakeLists.txt  constrained_decoder_test.cc  gemma_model_constraint_provider.lds  llguidance_schema_utils.cc  llguidance_schema_utils.h  llguidance_schema_utils_test.cc
runtime/components/constrained_decoding/proto/: BUILD
runtime/components/embedding_lookup/: BUILD  CMakeLists.txt  embedding_lookup_end_of_multi_modal.cc  embedding_lookup_end_of_multi_modal.h  embedding_lookup_end_of_multi_modal_test.cc  embedding_lookup_manager.cc  embedding_lookup_manager_test.cc  embedding_lookup_multi_modal.cc  embedding_lookup_multi_modal.h  embedding_lookup_multi_modal_test.cc  embedding_lookup_text.cc  embedding_lookup_text.h  embedding_lookup_text_test.cc
runtime/components/preprocessor/: BUILD  CMakeLists.txt  audio_preprocessor_miniaudio.cc  image_preprocessor_factory.cc  image_preprocessor_factory.h  skia_image_preprocessor.cc  skia_image_preprocessor.h  skia_image_preprocessor_test.cc  stb_image_preprocessor.cc  stb_image_preprocessor_test.cc
runtime/components/rust/: BUILD  minijinja_template.rs
runtime/components/testdata/: google-function-gemma-hf.jinja
runtime/components/tool_use/: BUILD  CMakeLists.txt  python_parser_utils.cc  python_parser_utils_test.cc
runtime/components/tool_use/antlr/: BUILD  CMakeLists.txt
runtime/conversation/: BUILD  CMakeLists.txt  conversation.cc  conversation.h  conversation_test.cc  internal_callback_util.cc  internal_callback_util_test.cc  tool_manager.h  tool_manager_test.cc
runtime/conversation/model_data_processor/: BUILD  CMakeLists.txt  data_utils.cc  data_utils_test.cc  gemma3_data_processor.cc  gemma3_data_processor.h  gemma3_data_processor_test.cc  generic_data_processor.cc  generic_data_processor.h  generic_data_processor_test.cc  model_data_processor.cc  model_data_processor.h  model_data_processor_factory.cc  model_data_processor_factory.h  model_data_processor_factory_test.cc  model_data_processor_test.cc  qwen3_data_processor_test.cc
runtime/core/: BUILD  CMakeLists.txt  engine_advanced_impl_test.cc  engine_advanced_legacy_impl.cc  engine_impl.cc  engine_impl_test.cc  pipeline.cc  pipeline.h  pipeline_test.cc  session_advanced.cc  session_advanced.h  session_advanced_test.cc  session_basic.cc  session_basic.h  session_basic_test.cc  tasks.cc
runtime/engine/: BUILD  CMakeLists.txt  engine.h  engine_settings.cc  engine_settings.h  engine_settings_test.cc  io_types.cc  io_types.h  io_types_test.cc  lit.cc  litert_lm_advanced_main.cc  litert_lm_lib.cc  litert_lm_lib.h  litert_lm_main.cc  model_downloader.cc  model_downloader.h  model_downloader_test.cc  model_manager.cc  model_manager.h  model_manager_test.cc
runtime/engine/batch_io/: BUILD  batch_io_example_record_converter.cc  batch_io_utils.cc  (+9 more)
runtime/executor/: BUILD  CMakeLists.txt  audio_litert_compiled_model_executor.cc  audio_litert_compiled_model_executor_test.cc  executor_settings_base.cc  executor_settings_base.h  fake_llm_executor.cc  fake_llm_executor.h  fake_llm_executor_test.cc  litert_compiled_model_executor_utils.cc  litert_compiled_model_executor_utils.h  litert_compiled_model_executor_utils_test.cc  llm_executor_base.h  llm_executor_processed_tokens.h  llm_executor_settings.cc  llm_executor_settings.h  llm_executor_settings_test.cc  llm_litert_compiled_model_executor.cc  llm_litert_compiled_model_executor.h  llm_litert_compiled_model_executor_factory.cc  llm_litert_compiled_model_executor_factory_test.cc  llm_litert_compiled_model_executor_test.cc  llm_litert_npu_compiled_model_executor.cc  llm_litert_npu_compiled_model_executor.h  magic_number_configs_helper.cc  magic_number_configs_helper.h  vision_litert_compiled_model_executor.cc  vision_litert_compiled_model_executor_test.cc
runtime/framework/: BUILD  CMakeLists.txt
runtime/proto/: BUILD  llm_metadata.proto  llm_model_type.proto  sampler_params.proto
runtime/testdata/: BUILD
runtime/util/: BUILD  CMakeLists.txt  convert_tensor_buffer.h  convert_tensor_buffer_test.cc  file_format_util.cc  file_format_util.h  file_format_util_test.cc  litert_lm_loader.cc  litert_lm_loader.h  litert_lm_loader_test.cc  logging_tensor_buffer.cc  logging_test.cc  lora_data.cc  lora_data.h  lora_data_test.cc  lora_util.cc  lora_util.h  lora_util_test.cc  memory_mapped_file.h  memory_mapped_file_posix.cc  memory_mapped_file_test.cc  memory_mapped_file_win.cc  model_asset_bundle_resources.cc  model_asset_bundle_resources.h  perfetto_profiling.cc  perfetto_profiling.h  scoped_file.cc  scoped_file.h  scoped_file_posix.cc  scoped_file_test.cc  scoped_file_win.cc
schema/: BUILD  CMakeLists.txt
schema/cc/: BUILD  CMakeLists.txt
schema/core/: BUILD  CMakeLists.txt  litertlm_header.h  litertlm_read.cc
schema/py/: BUILD  CMakeLists.txt  litertlm_builder.py  litertlm_core.py
(+24 files in other folders)
